# harsh-engine

./: .env  README.md  pyproject.toml  requirements.txt
src/harsh_engine/app/: __init__.py  app.py  database.py  exceptions.py  utils.py
src/harsh_engine/app/data/: schema.sql
src/harsh_engine/app/model/: data_mappers.py  entities.py
src/harsh_engine/app/routes/: auth.py
src/harsh_engine/app/templates/: about.html  home.html  index.html
src/harsh_engine/tests/: README.md  test_data_mappers.py  test_entities.py
src/harsh_engine/tests/data/: test_schema.sql
